--- a/docker-compose-ci.yml
+++ b/docker-compose-ci.yml
@@ -26,3 +26,8 @@ services:
       MYSQL_USER: user
       MYSQL_PASSWORD: password
       MYSQL_ALLOW_EMPTY_PASSWORD: 1
+
+  dockerize:
+    image: jwilder/dockerize
+    entrypoint: ['dockerize', '-timeout', '60s', '-wait', 'tcp://mysql:3306']
+    command: ['tail', '-F', '/dev/null']
