--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,14 @@
         }
     },
     "require": {
-        "php": "^7.1",
+        "php": "^7.1 || ^8.0",
         "ext-pdo": "*",
-        "illuminate/database": "^5.8 || ^6.0 || ^7.0 || ^8.0",
-        "illuminate/support": "^5.8 || ^6.0 || ^7.0 || ^8.0",
+        "illuminate/database": "^5.8 || ^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "illuminate/support": "^5.8 || ^6.0 || ^7.0 || ^8.0 || ^9.0",
         "mpyw/unclosure": "^1.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0",
+        "orchestra/testbench": "^6.0",
         "laravel/framework": "^7.0",
         "friendsofphp/php-cs-fixer": "^2.15",
         "mockery/mockery": "^1.3"
