--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
 
     strategy:
       matrix:
-        php: [7.1, 7.2, 7.3, 7.4]
+        php: [7.1, 7.2, 7.3, 7.4, 8.0]
         lib:
           - { laravel: ^8.0, testbench: ^6.0, composer_flags: --prefer-stable }
           - { laravel: ^7.0, testbench: ^5.0, composer_flags: --prefer-stable }
@@ -70,7 +70,12 @@ jobs:
       - name: Adjust Package Versions
         run: |
           composer require "laravel/framework:${{ matrix.lib.laravel }}" --dev --no-update ${{ matrix.lib.composer_flags }}
-          composer require "orchestra/testbench:${{ matrix.lib.testbench }}" --dev --no-update ${{ matrix.lib.composer_flags }}
+          if php -r 'exit((int)!version_compare(PHP_VERSION, "8", ">="));'; then
+            composer require "orchestra/testbench:>=4.14" --dev --no-update ${{ matrix.lib.composer_flags }}
+            composer require "phpunit/phpunit:>=9.3" --dev --no-update ${{ matrix.lib.composer_flags }}
+          else
+            composer require "orchestra/testbench:${{ matrix.lib.testbench }}" --dev --no-update ${{ matrix.lib.composer_flags }}
+          fi
           composer update ${{ matrix.lib.composer_flags }}
 
       - run: mkdir -p build/logs
