--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -9,11 +9,12 @@ filter:
 
 build:
 
-  environment:
-    php: '7.4'
-    docker: true
-
   nodes:
+    analysis:
+      tests:
+        override:
+          - php-scrutinizer-run
+
     custom-nodes:
       services:
         custom-mysql:
@@ -25,6 +26,10 @@ build:
             MYSQL_ROOT_PASSWORD: testing
           ports:
             - 3306
+
+  environment:
+    php: '7.4'
+    docker: true
 
   dependencies:
     before:
