--- a/composer.json
+++ b/composer.json
@@ -23,13 +23,14 @@
     "require": {
         "php": "^7.1 || ^8.0",
         "ext-pdo": "*",
-        "illuminate/database": "^5.8 || ^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "illuminate/support": "^5.8 || ^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "illuminate/database": "^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0",
         "mpyw/unclosure": "^1.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0",
-        "friendsofphp/php-cs-fixer": "^2.15",
-        "mockery/mockery": "^1.3"
-    }
+        "orchestra/testbench": "*",
+        "mockery/mockery": "^1.3.3"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
