--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "keywords": ["laravel", "illuminate", "database", "pdo", "prepared", "emulation"],
     "autoload": {
         "psr-4": {
-            "Mpyw\\LaravelPdoEmulationControl\\": "src/"
+            "Mpyw\\LaravelPdoEmulationControl\\": "src/",
+            "Mpyw\\LaravelPdoEmulationControl\\PHPStan\\": "phpstan/"
         }
     },
     "autoload-dev": {
@@ -21,17 +22,24 @@
         }
     },
     "require": {
-        "php": "^7.3 || ^8.0",
+        "php": "^7.4 || ^8.0",
         "ext-pdo": "*",
         "illuminate/database": "^6.0 || ^7.0 || ^8.0 || ^9.0",
         "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "mpyw/unclosure": "^1.0"
+        "mpyw/unclosure": "^3.0"
     },
     "require-dev": {
         "orchestra/testbench": "*",
         "orchestra/testbench-core": "^4.9 || ^5.9 || >=6.6",
+        "mockery/mockery": "^1.3.3 || ^1.4.2",
         "phpunit/phpunit": ">=9.5",
-        "mockery/mockery": "^1.3.3 || ^1.4.2"
+        "phpstan/phpstan": ">=1.1",
+        "phpstan/extension-installer": ">=1.1",
+        "nunomaduro/larastan": "^1.0"
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit",
+        "phpstan": "vendor/bin/phpstan analyse --level=9 --configuration=extension.neon src tests phpstan"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
