--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "phpunit/phpunit": ">=9.5",
         "phpstan/phpstan": ">=1.1",
         "phpstan/extension-installer": ">=1.1",
-        "nunomaduro/larastan": "^1.0"
+        "nunomaduro/larastan": ">=1.0"
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
