--- a/composer.json
+++ b/composer.json
@@ -22,15 +22,15 @@
         }
     },
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.0",
         "ext-pdo": "*",
-        "illuminate/database": "^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0",
-        "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0",
+        "illuminate/database": "^9.0 || ^10.0",
+        "illuminate/support": "^9.0 || ^10.0",
         "mpyw/unclosure": "^3.0"
     },
     "require-dev": {
         "orchestra/testbench": "*",
-        "orchestra/testbench-core": "^4.9 || ^5.9 || >=6.6",
+        "orchestra/testbench-core": ">=7.0",
         "mockery/mockery": "^1.3.3 || ^1.4.2",
         "phpunit/phpunit": ">=9.5",
         "phpstan/phpstan": ">=1.1",
