--- a/composer.json
+++ b/composer.json
@@ -22,20 +22,20 @@
         }
     },
     "require": {
-        "php": "^8.0",
+        "php": "^8.2",
         "ext-pdo": "*",
-        "illuminate/database": "^9.0 || ^10.0 || ^11.0",
-        "illuminate/support": "^9.0 || ^10.0 || ^11.0",
-        "mpyw/unclosure": "^3.0"
+        "illuminate/database": "^11.0 || ^12.0 || ^13.0",
+        "illuminate/support": "^11.0 || ^12.0 || ^13.0",
+        "mpyw/unclosure": "^3.1"
     },
     "require-dev": {
         "orchestra/testbench": "*",
-        "orchestra/testbench-core": ">=7.0",
-        "mockery/mockery": "^1.3.3 || ^1.4.2",
-        "phpunit/phpunit": ">=9.5",
-        "phpstan/phpstan": ">=1.1",
-        "phpstan/extension-installer": ">=1.1",
-        "nunomaduro/larastan": ">=1.0"
+        "orchestra/testbench-core": ">=9.0",
+        "mockery/mockery": "^1.6.12",
+        "phpunit/phpunit": ">=11.0",
+        "phpstan/phpstan": ">=2.0",
+        "phpstan/extension-installer": ">=1.4",
+        "nunomaduro/larastan": ">=3.1"
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
